--- a/src/maui/MdLabel/MdLabel/Styles/Markdown.xaml
+++ b/src/maui/MdLabel/MdLabel/Styles/Markdown.xaml
@@ -50,7 +50,7 @@
     <Style TargetType="md:MarkdownHeader5Span" BasedOn="{StaticResource MarkdownHeader5StyleBase}"/>
     <Style TargetType="md:MarkdownHeader6Span" BasedOn="{StaticResource MarkdownHeader6StyleBase}"/>-->
 
-    <Style TargetType="md:MarkdownInlineLinkSpan" BasedOn="{StaticResource MarkdownInlineBase}" />
+    <!--<Style TargetType="md:MarkdownInlineLinkSpan" BasedOn="{StaticResource MarkdownInlineBase}" />-->
     <Style TargetType="md:MarkdownInlineSpan" BasedOn="{StaticResource MarkdownInlineBase}" />
 
     <Style x:Key="MarkdownListBase" TargetType="md:MarkdownInlineSpanBase">
