--- a/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
@@ -70,15 +70,24 @@
                 HorizontalOptions="Center"
                 HorizontalTextAlignment="Center">
                 <md:MarkdownLabel.Text>
-                    # Header A  
-                    ## Header B  
-                    ### Header C _with italic_  
-                    _First Line is italic text._  
-                    **New Line in bold**  
-                    ~~New line strike through~~  
-                    New line normal
-                    *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*
-                    # Header 1 Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)
+# Header A
+## Header B
+### Header C _with italic_
+_First Line is italic text._
+**New Line in bold**
+~~New line strike through~~
+New line normal
+*Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*
+# Header 1 Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)
+1. Item 1
+2. Item 2
+    1. Indent Item 1.1
+    2. Indent Item 1.2
+3. Item 3
+* Item a
+* Item b
+    Line in list
+* Item c
                 </md:MarkdownLabel.Text>
             </md:MarkdownLabel>
 
