--- a/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
@@ -67,15 +67,15 @@
                 x:Name="Markdown"
                 Margin="60,0,60,0"
                 VerticalOptions="Start"
-                HorizontalOptions="Center"
-                HorizontalTextAlignment="Center">
+                HorizontalOptions="Start"
+                HorizontalTextAlignment="Start">
                 <md:MarkdownLabel.Text>
 # Header A
 ## Header B
 ### Header C _with italic_
-_First Line is italic text._
-**New Line in bold**
-~~New line strike through~~
+_First Line is italic text._  
+**New Line in bold**  
+~~New line strike through~~  
 New line normal
 *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*
 # Header 1 Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)
