--- a/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
@@ -82,7 +82,7 @@ _First Line is italic text._
 
 ~~New line strike through~~  
 
-New line normal
+New line normal [test]
 
 *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*
 
@@ -104,6 +104,8 @@ New line normal
     Line in list
                     
 * Item c
+                    
+[test]: Inserted variable
                     
                 </md:MarkdownLabel.Text>
             </md:MarkdownLabel>
